# dotfiles

./: .aliases  .completions  .editorconfig  .exports  .functions  .gitignore  .gitmodules  .libs  .prettierrc.js  .profile  .profile-bash.sh  .profile-zsh.sh  .profile.bash  .profile.zsh  .rubocop.yml  Gemfile  LICENSE  aliases.sh  completions.bash.sh  completions.sh  completions.zsh.sh  exports.interactive.sh  exports.noninteractive.sh  exports.sh  functions.sh  install-deps.sh  install.sh  libs.sh  oh-my-zsh.sh  oh-my-zsh.zsh  profile.bash.sh  profile.zsh.sh  pyproject.toml  requirements.txt  setup.py  sync.py
completions/: bash.bash.sh  brew.bash.sh  brew.zsh.sh  docker.zsh.sh  git-completion.bash  git.bash.sh  heroku.bash.sh  heroku.zsh.sh  nvm.bash.sh  nvm.zsh.sh  one-password.bash.sh  one-password.zsh.sh  poetry.zsh.sh  rvm.bash.sh  rvm.zsh.sh  ssh.zsh.sh
config/: gitconfig  screenrc  tmux.conf  vimrc
data/: z.secret
exports/: bash  bash-colors  bash-git-prompt.sh  bash-prompt  bash-prompt.sh  brew.sh  cli-colors.sh  composer  docker.sh  dotfiles-bin-path.sh  gatsby.sh  github  gnu-utils  gnu-utils.sh  herd.sh  heroku-autocomplete.sh  homebrew  jenv.sh  ls-colors.sh  mysql.sh  ndenv  nix-shell.sh  nvm  nvm.sh  path  path.sh  poetry.sh  proxy  pyenv.interactive.sh  pyenv.sh  python.sh  rbenv  rbenv.sh  rvm  rvm.sh  sdkman.sh  secrets.secret  vim  vim.sh  yarn  (+5 more)
functions/: fp.sh  logging  logging.sh  proxy  proxy.sh  public  public.sh
installers/: brew.sh  heroku-cli.sh  nvm.sh  oh-my-zsh.sh  poetry.sh  pyenv.sh  rvm.sh  sdkman.sh  vim-vundle.sh
(+23 files in other folders)
