[tool.poetry]
name = ".dotfiles"
version = "0.9.0"
description = ""
authors = ["Wes Moberly <wesm87@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.2"
toolz = "^0.11.1"
urllib3 = "^1.25.10"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pycodestyle = "^2.6.0"
pylint = "^2.6.0"
pylint-quotes = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
